<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.invoicegenie</groupId>
    <artifactId>invoice-genie</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>InvoiceGenie AR Backend</name>
    <description>Multi-tenant Accounts Receivable backend - DDD + Hexagonal</description>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <!-- Quarkus 3.27 LTS (STORY-004) — community support through ~Sep 2026 -->
        <quarkus.platform.version>3.27.3</quarkus.platform.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jacoco.version>0.8.12</jacoco.version>
        <versions.maven.plugin.version>2.18.0</versions.maven.plugin.version>
        <dependency.check.version>12.1.0</dependency.check.version>
        <!-- Production gate: line coverage must stay above 80% -->
        <jacoco.minimum.coverage>0.80</jacoco.minimum.coverage>
        <!-- OWASP Dependency-Check: fail on CVSS >= 7 (High/Critical). Override with -DfailBuildOnCVSS=11 to report-only. -->
        <dependency.check.failBuildOnCVSS>7</dependency.check.failBuildOnCVSS>
        <dependency.check.skip>false</dependency.check.skip>
        <!-- Empty by default; pass -DnvdApiKey=... or scripts load NVD_API_KEY from .env -->
        <nvdApiKey></nvdApiKey>
    </properties>

    <modules>
        <module>shared-kernel</module>
        <module>ar-domain</module>
        <module>ar-application</module>
        <module>ar-adapter-api</module>
        <module>ar-adapter-persistence</module>
        <module>ar-adapter-messaging</module>
        <module>ar-bootstrap</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.quarkus.platform</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                    <executions>
                        <execution>
                            <id>prepare-agent</id>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>test</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>check</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <rule>
                                        <element>BUNDLE</element>
                                        <limits>
                                            <limit>
                                                <counter>LINE</counter>
                                                <value>COVEREDRATIO</value>
                                                <minimum>${jacoco.minimum.coverage}</minimum>
                                            </limit>
                                        </limits>
                                    </rule>
                                </rules>
                            </configuration>
                        </execution>
                        <!-- Aggregate is invoked from root: mvn jacoco:report-aggregate -->
                        <execution>
                            <id>report-aggregate</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>report-aggregate</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>${versions.maven.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.owasp</groupId>
                    <artifactId>dependency-check-maven</artifactId>
                    <version>${dependency.check.version}</version>
                    <configuration>
                        <skip>${dependency.check.skip}</skip>
                        <failBuildOnCVSS>${dependency.check.failBuildOnCVSS}</failBuildOnCVSS>
                        <formats>
                            <format>HTML</format>
                            <format>JSON</format>
                        </formats>
                        <prettyPrint>true</prettyPrint>
                        <outputDirectory>${project.build.directory}/dependency-check</outputDirectory>
                        <!-- Faster local/CI defaults; NVD can be re-enabled when an NVD API key is available -->
                        <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
                        <nodeAnalyzerEnabled>false</nodeAnalyzerEnabled>
                        <nodeAuditAnalyzerEnabled>false</nodeAuditAnalyzerEnabled>
                        <retireJsAnalyzerEnabled>false</retireJsAnalyzerEnabled>
                        <nuspecAnalyzerEnabled>false</nuspecAnalyzerEnabled>
                        <nugetconfAnalyzerEnabled>false</nugetconfAnalyzerEnabled>
                        <bundleAuditAnalyzerEnabled>false</bundleAuditAnalyzerEnabled>
                        <centralAnalyzerEnabled>true</centralAnalyzerEnabled>
                        <ossindexAnalyzerEnabled>true</ossindexAnalyzerEnabled>
                        <!-- Pass -DnvdApiKey=... or env NVD_API_KEY via scripts/security-scan.* -->
                        <nvdApiKey>${nvdApiKey}</nvdApiKey>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <!-- Apply JaCoCo to all modules (inherited) - reports generated on test -->
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
            </plugin>
            <!-- Security scan is opt-in via profile `security-scan` (NVD download is large). -->
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>security-scan</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.owasp</groupId>
                        <artifactId>dependency-check-maven</artifactId>
                        <executions>
                            <execution>
                                <id>dependency-check-aggregate</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>aggregate</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>